--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Character</title>
 </head>
 <body>
-    <div id="first" class="text active" olajto="13">Kiskacsa
+    <div id="first" class="text" olajto="13">Kiskacsa
         <a href="">A1</a>
         <a href="">A2</a>
         <a href="">A3</a>
     </div>
-    <div id="second"></div>
+    <div id="second" class="text">ASD</div>
 
     <script src="main.js"></script>
 </body>
