--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </div>
     <div id="second" class="text">ASD</div>
 
+    <div class="other">nig1</div>
+    <div class="other">nig2</div>
+    <div class="other">nig3</div>
+    <div class="other">nig4</div>
+    <div class="other">nig5</div>
+
     <script src="main.js"></script>
 </body>
 </html>
