--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <div class="other">nig1</div>
     <div class="other">nig2</div>
     <div class="other">nig3</div>
-    <div class="other">nig4</div>
+    <div class="other" id="delme">nig4</div>
     <div class="other">nig5</div>
+
+    <ul class="lista">
+        <li id="delme">1</li>
+        <li>2</li>
+    </ul>
 
     <script src="main.js"></script>
 </body>
