--- a/char.html
+++ b/char.html
@@ -9,10 +9,41 @@
 </head>
 <body>
     <div class="window">
-        <div class="flex1"></div>
-        <div class="flex2"></div>
-        <div class="flex3"></div>
-        <div class="flex4"></div>
+        <div class="flex1">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+        </div>
+        <div class="flex2">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+        </div>
+        <div class="flex3">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+        </div>
+        <div class="flex4">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+            <img src="" alt="armors">
+        </div>
+
+        <div class="armor1">ARMOR1</div>
+        <div class="armor2">ARMOR2</div>
+        <div class="armor3">ARMOR3</div>
+        <div class="armor4">ARMOR4</div>
+
+        <div class="nothing"></div>
+
+        <div class="weapon1"></div>
+        <div class="noweapon"></div>
+        <div class="weapon2"></div>
     </div>
 </body>
 </html>
