--- a/char.html
+++ b/char.html
@@ -10,38 +10,46 @@
 <body>
     <div class="window">
         <div class="flex1">
-            <img src="assets/imgs/h_c.png" alt="armors">
-            <img src="assets/imgs/h_d.png" alt="armors">
-            <img src="assets/imgs/h_g.png" alt="armors">
-            <img src="assets/imgs/h_i.png" alt="armors">
-            <img src="assets/imgs/h_l.png" alt="armors">
+            <img src="assets/imgs/h_c.png" alt="armors" onclick="armor1Click(this)">
+            <img src="assets/imgs/h_d.png" alt="armors" onclick="armor1Click(this)">
+            <img src="assets/imgs/h_g.png" alt="armors" onclick="armor1Click(this)">
+            <img src="assets/imgs/h_i.png" alt="armors" onclick="armor1Click(this)">
+            <img src="assets/imgs/h_l.png" alt="armors" onclick="armor1Click(this)">
         </div>
         <div class="flex2">
-            <img src="assets/imgs/c_c.png" alt="armors">
-            <img src="assets/imgs/c_d.png" alt="armors">
-            <img src="assets/imgs/c_g.png" alt="armors">
-            <img src="assets/imgs/c_i.png" alt="armors">
-            <img src="assets/imgs/c_l.png" alt="armors">
+            <img src="assets/imgs/c_c.png" alt="armors" onclick="armor2Click(this)">
+            <img src="assets/imgs/c_d.png" alt="armors" onclick="armor2Click(this)">
+            <img src="assets/imgs/c_g.png" alt="armors" onclick="armor2Click(this)">
+            <img src="assets/imgs/c_i.png" alt="armors" onclick="armor2Click(this)">
+            <img src="assets/imgs/c_l.png" alt="armors" onclick="armor2Click(this)">
         </div>
         <div class="flex3">
-            <img src="assets/imgs/t_c.png" alt="armors">
-            <img src="assets/imgs/t_d.png" alt="armors">
-            <img src="assets/imgs/t_g.png" alt="armors">
-            <img src="assets/imgs/t_i.png" alt="armors">
-            <img src="assets/imgs/t_l.png" alt="armors">
+            <img src="assets/imgs/t_c.png" alt="armors" onclick="armor3Click(this)">
+            <img src="assets/imgs/t_d.png" alt="armors" onclick="armor3Click(this)">
+            <img src="assets/imgs/t_g.png" alt="armors" onclick="armor3Click(this)">
+            <img src="assets/imgs/t_i.png" alt="armors" onclick="armor3Click(this)">
+            <img src="assets/imgs/t_l.png" alt="armors" onclick="armor3Click(this)">
         </div>
         <div class="flex4">
-            <img src="assets/imgs/s_c.png" alt="armors">
-            <img src="assets/imgs/s_d.png" alt="armors">
-            <img src="assets/imgs/s_g.png" alt="armors">
-            <img src="assets/imgs/s_i.png" alt="armors">
-            <img src="assets/imgs/s_l.png" alt="armors">
+            <img src="assets/imgs/s_c.png" alt="armors" onclick="armor4Click(this)">
+            <img src="assets/imgs/s_d.png" alt="armors" onclick="armor4Click(this)">
+            <img src="assets/imgs/s_g.png" alt="armors" onclick="armor4Click(this)">
+            <img src="assets/imgs/s_i.png" alt="armors" onclick="armor4Click(this)">
+            <img src="assets/imgs/s_l.png" alt="armors" onclick="armor4Click(this)">
         </div>
 
-        <div class="armor1">ARMOR1</div>
-        <div class="armor2">ARMOR2</div>
-        <div class="armor3">ARMOR3</div>
-        <div class="armor4">ARMOR4</div>
+        <div class="armor1">
+            <img src="" alt="" id="armor1">
+        </div>
+        <div class="armor2">
+            <img src="" alt="" id="armor2">
+        </div>
+        <div class="armor3">
+            <img src="" alt="" id="armor3">
+        </div>
+        <div class="armor4">
+            <img src="" alt="" id="armor4">
+        </div>
 
         <div class="nothing"></div>
 
@@ -53,5 +61,7 @@
             <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="">
         </div>
     </div>
+
+    <script src="char.js"></script>
 </body>
 </html>
