--- a/char.html
+++ b/char.html
@@ -10,32 +10,32 @@
 <body>
     <div class="window">
         <div class="flex1">
-            <img src="assets/imgs/h_c.png" alt="armors" onclick="armor1Click(this)">
-            <img src="assets/imgs/h_d.png" alt="armors" onclick="armor1Click(this)">
-            <img src="assets/imgs/h_g.png" alt="armors" onclick="armor1Click(this)">
-            <img src="assets/imgs/h_i.png" alt="armors" onclick="armor1Click(this)">
-            <img src="assets/imgs/h_l.png" alt="armors" onclick="armor1Click(this)">
+            <img src="assets/imgs/h_c.png" alt="armors" onclick="armor1Click(this)" draggable="false">
+            <img src="assets/imgs/h_d.png" alt="armors" onclick="armor1Click(this)" draggable="false">
+            <img src="assets/imgs/h_g.png" alt="armors" onclick="armor1Click(this)" draggable="false">
+            <img src="assets/imgs/h_i.png" alt="armors" onclick="armor1Click(this)" draggable="false">
+            <img src="assets/imgs/h_l.png" alt="armors" onclick="armor1Click(this)" draggable="false">
         </div>
         <div class="flex2">
-            <img src="assets/imgs/c_c.png" alt="armors" onclick="armor2Click(this)">
-            <img src="assets/imgs/c_d.png" alt="armors" onclick="armor2Click(this)">
-            <img src="assets/imgs/c_g.png" alt="armors" onclick="armor2Click(this)">
-            <img src="assets/imgs/c_i.png" alt="armors" onclick="armor2Click(this)">
-            <img src="assets/imgs/c_l.png" alt="armors" onclick="armor2Click(this)">
+            <img src="assets/imgs/c_c.png" alt="armors" onclick="armor2Click(this)" draggable="false">
+            <img src="assets/imgs/c_d.png" alt="armors" onclick="armor2Click(this)" draggable="false">
+            <img src="assets/imgs/c_g.png" alt="armors" onclick="armor2Click(this)" draggable="false">
+            <img src="assets/imgs/c_i.png" alt="armors" onclick="armor2Click(this)" draggable="false">
+            <img src="assets/imgs/c_l.png" alt="armors" onclick="armor2Click(this)" draggable="false">
         </div>
         <div class="flex3">
-            <img src="assets/imgs/t_c.png" alt="armors" onclick="armor3Click(this)">
-            <img src="assets/imgs/t_d.png" alt="armors" onclick="armor3Click(this)">
-            <img src="assets/imgs/t_g.png" alt="armors" onclick="armor3Click(this)">
-            <img src="assets/imgs/t_i.png" alt="armors" onclick="armor3Click(this)">
-            <img src="assets/imgs/t_l.png" alt="armors" onclick="armor3Click(this)">
+            <img src="assets/imgs/t_c.png" alt="armors" onclick="armor3Click(this)" draggable="false">
+            <img src="assets/imgs/t_d.png" alt="armors" onclick="armor3Click(this)" draggable="false">
+            <img src="assets/imgs/t_g.png" alt="armors" onclick="armor3Click(this)" draggable="false">
+            <img src="assets/imgs/t_i.png" alt="armors" onclick="armor3Click(this)" draggable="false">
+            <img src="assets/imgs/t_l.png" alt="armors" onclick="armor3Click(this)" draggable="false">
         </div>
         <div class="flex4">
-            <img src="assets/imgs/s_c.png" alt="armors" onclick="armor4Click(this)">
-            <img src="assets/imgs/s_d.png" alt="armors" onclick="armor4Click(this)">
-            <img src="assets/imgs/s_g.png" alt="armors" onclick="armor4Click(this)">
-            <img src="assets/imgs/s_i.png" alt="armors" onclick="armor4Click(this)">
-            <img src="assets/imgs/s_l.png" alt="armors" onclick="armor4Click(this)">
+            <img src="assets/imgs/s_c.png" alt="armors" onclick="armor4Click(this)" draggable="false">
+            <img src="assets/imgs/s_d.png" alt="armors" onclick="armor4Click(this)" draggable="false">
+            <img src="assets/imgs/s_g.png" alt="armors" onclick="armor4Click(this)" draggable="false">
+            <img src="assets/imgs/s_i.png" alt="armors" onclick="armor4Click(this)" draggable="false">
+            <img src="assets/imgs/s_l.png" alt="armors" onclick="armor4Click(this)" draggable="false">
         </div>
 
         <div class="armor1">
