ALT js solution

--- a/char.html
+++ b/char.html
@@ -39,16 +39,16 @@
         </div>
 
         <div class="armor1">
-            <img src="" alt="" id="armor1" onclick="noArmor(this)">
+            <!--<img src="" alt="" id="armor1" onclick="noArmor(this)">-->
         </div>
         <div class="armor2">
-            <img src="" alt="" id="armor2" onclick="noArmor(this)">
+            <!--<img src="" alt="" id="armor2" onclick="noArmor(this)">-->
         </div>
         <div class="armor3">
-            <img src="" alt="" id="armor3" onclick="noArmor(this)">
+            <!--<img src="" alt="" id="armor3" onclick="noArmor(this)">-->
         </div>
         <div class="armor4">
-            <img src="" alt="" id="armor4" onclick="noArmor(this)">
+            <!--<img src="" alt="" id="armor4" onclick="noArmor(this)">-->
         </div>
 
         <div class="nothing"></div>
