--- a/char.html
+++ b/char.html
@@ -54,11 +54,11 @@
         <div class="nothing"></div>
 
         <div class="weapon1">
-            <img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="fegyver1" draggable="false">
+            <!--<img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="fegyver1" draggable="false">-->
         </div>
         <div class="noweapon"></div>
         <div class="weapon2">
-            <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="fegyver2" draggable="false">
+            <!--<img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="fegyver2" draggable="false">-->
         </div>
     </div>
 
