--- a/char.html
+++ b/char.html
@@ -61,6 +61,13 @@
             <!--<img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="fegyver2" draggable="false">-->
         </div>
     </div>
+    <dialog open id="weapon1">
+        weap1
+    </dialog>
+    <dialog>
+        weap2
+    </dialog id="weapon2">
+
 
     <script src="char.js"></script>
 </body>
