--- a/char.html
+++ b/char.html
@@ -53,20 +53,20 @@
 
         <div class="nothing"></div>
 
-        <div class="weapon1">
+        <div class="weapon">
             <!--<img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="fegyver1" draggable="false">-->
         </div>
         <div class="noweapon"></div>
-        <div class="weapon2">
+        <div class="shield">
             <!--<img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="fegyver2" draggable="false">-->
         </div>
     </div>
-    <dialog open id="weapon1">
-        weap1
+    <dialog id="weapon">
+        weapon
     </dialog>
-    <dialog>
-        weap2
-    </dialog id="weapon2">
+    <dialog id="shield">
+        shield
+    </dialog>
 
 
     <script src="char.js"></script>
