--- a/char.html
+++ b/char.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
     <link rel="stylesheet" href="assets/main.css" type="text/css">
 </head>
+
 <body>
     <div class="window">
         <div class="flex1">
@@ -54,7 +56,7 @@
         <div class="nothing"></div>
 
         <div class="weapon">
-            <!--<img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="fegyver1" draggable="false">-->
+            <img src="" alt="" draggable="false" id="weaponSlot">
         </div>
         <div class="noweapon"></div>
         <div class="shield">
@@ -62,13 +64,35 @@
         </div>
     </div>
     <dialog id="weapon">
-        weapon
+        <form method="dialog">
+            <header>
+                <h1>Weapon Chooser</h1>
+            </header>
+            <section>
+                <img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="AXE" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="SWORD" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Shovel-595b40b75ba036ed117d8662.svg" alt="SHOVEL" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Pickaxe-595b40b75ba036ed117d8661.svg" alt="PICKAXE" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="AXE" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="SWORD" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Shovel-595b40b75ba036ed117d8662.svg" alt="SHOVEL" draggable="false" onclick="weapon(this)">
+                <img src="assets/imgs/Minecraft Pickaxe-595b40b75ba036ed117d8661.svg" alt="PICKAXE" draggable="false" onclick="weapon(this)">
+            </section>
+            <footer>
+                <input type="submit" value="Close">
+            </footer>
+        </form>
     </dialog>
     <dialog id="shield">
-        shield
+        <header>
+            <h1>Shield Chooser</h1>
+        </header>
+        <section>
+            <img src="#" alt="SHIELD">
+        </section>
     </dialog>
-
 
     <script src="char.js"></script>
 </body>
+
 </html>
