weapons dialog fill with code

--- a/char.html
+++ b/char.html
@@ -68,15 +68,13 @@
             <header>
                 <h1>Weapon Chooser</h1>
             </header>
-            <section>
-                <img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="AXE" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="SWORD" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Shovel-595b40b75ba036ed117d8662.svg" alt="SHOVEL" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Pickaxe-595b40b75ba036ed117d8661.svg" alt="PICKAXE" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Axe-595b40b75ba036ed117d865d.svg" alt="AXE" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="SWORD" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Shovel-595b40b75ba036ed117d8662.svg" alt="SHOVEL" draggable="false" onclick="weapon(this)">
-                <img src="assets/imgs/Minecraft Pickaxe-595b40b75ba036ed117d8661.svg" alt="PICKAXE" draggable="false" onclick="weapon(this)">
+            <section class="weaponSelect">
+                <!--
+                <img src="assets/imgs/d_a.svg" alt="AXE" draggable="false" onclick="weaponClick(this)">
+                <img src="assets/imgs/d_sw.svg" alt="SWORD" draggable="false" onclick="weaponClick(this)">
+                <img src="assets/imgs/d_s.svg" alt="SHOVEL" draggable="false" onclick="weaponClick(this)">
+                <img src="assets/imgs/d_p.svg" alt="PICKAXE" draggable="false" onclick="weaponClick(this)">
+                -->
             </section>
             <footer>
                 <input type="submit" value="Close">
