--- a/char.html
+++ b/char.html
@@ -56,11 +56,11 @@
         <div class="nothing"></div>
 
         <div class="weapon">
-            <img src="" alt="" draggable="false" id="weaponSlot">
+            <img src="" alt="weapon" draggable="false" id="weaponSlot">
         </div>
         <div class="noweapon"></div>
-        <div class="shield">
-            <!--<img src="assets/imgs/Minecraft Sword-595b40b75ba036ed117d8664.svg" alt="fegyver2" draggable="false">-->
+        <div class="tool">
+            <img src="" alt="tool" draggable="false" id="toolSlot">
         </div>
     </div>
     <dialog id="weapon">
@@ -77,17 +77,22 @@
                 -->
             </section>
             <footer>
-                <input type="submit" value="Close">
+                <input type="submit" value="Close" onclick="console.log('CLOSED - weapon dialog')">
             </footer>
         </form>
     </dialog>
-    <dialog id="shield">
-        <header>
-            <h1>Shield Chooser</h1>
-        </header>
-        <section>
-            <img src="#" alt="SHIELD">
-        </section>
+    <dialog id="tool">
+        <form method="dialog">
+            <header>
+                <h1>Tool Chooser</h1>
+            </header>
+            <section class="toolSelect">
+                <!--<img src="assets/imgs/shield.png" alt="SHIELD" onclick="toolClick(this)">-->
+            </section>
+            <footer>
+                <input type="submit" value="Close" onclick="console.log('CLOSED - tool dialog')">
+            </footer>
+        </form>
     </dialog>
 
     <script src="char.js"></script>
