--- a/char.html
+++ b/char.html
@@ -41,16 +41,16 @@
         </div>
 
         <div class="armor1">
-            <!--<img src="" alt="" id="armor1" onclick="noArmor(this)">-->
+            <img src="" alt="helmet" draggable="false" id="armor1" onclick="noArmor(this)">
         </div>
         <div class="armor2">
-            <!--<img src="" alt="" id="armor2" onclick="noArmor(this)">-->
+            <img src="" alt="chestplate" draggable="false" id="armor2" onclick="noArmor(this)">
         </div>
         <div class="armor3">
-            <!--<img src="" alt="" id="armor3" onclick="noArmor(this)">-->
+            <img src="" alt="leggings" draggable="false" id="armor3" onclick="noArmor(this)">
         </div>
         <div class="armor4">
-            <!--<img src="" alt="" id="armor4" onclick="noArmor(this)">-->
+            <img src="" alt="shoes" draggable="false" id="armor4" onclick="noArmor(this)">
         </div>
 
         <div class="nothing"></div>
